Fix dark mode selector

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -97,7 +97,8 @@ html[data-dark='true'] {
       fill: map-get($palette, muted);
     }
 
-    &:hover {
+    &:hover,
+    &.hovered {
       background-color: $dark;
     }
   }
