--- a/app/assets/stylesheets/components/_menus.scss
+++ b/app/assets/stylesheets/components/_menus.scss
@@ -193,6 +193,7 @@
   }
 
   &:hover,
+  &.hovered,
   &:focus {
     background-color: map-get($palette, selection);
   }
